# jari

./: Cargo.toml  README.md  TODO.md  TODO.org  rustfmt.toml
src/: cli.rs  config.rs  db.rs  lib.rs  main.rs
src/commands/: commands.rs  init.rs  mod.rs
