[package]
name = "jari"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "Small and simple offline project task tracker"
authors = ["mkmij <github.com/mkmij>"]

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
clap = { version = "4.5.53", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
inquire = "0.9.1"
dirs = "6.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"]}
uuid = { version = "1.19.0", features = ["v4"] }
